--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,31 @@
 body {
     display: flex;
     flex-direction: column; 
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.top {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #1f2937;
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+    padding: 10px 150px 100px;
 }
 
 header {
     display: flex;
     justify-content: space-between;
+}
+
+.logo {
+    width: 100px;
+    height: auto;
+    border-radius: 50%;
 }
 
 ul {
@@ -17,15 +37,22 @@ ul {
     align-self: center;
 }
 
-.logo {
-    width: 100px;
-    height: auto;
-    border-radius: 50%;
+a {
+    text-decoration: none;
 }
+
+a,
+#about p {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+    
+
+
 
 #about {
     display: flex;
-    gap: 50px;
+    gap: 100px;
 }
 
 .top-photo {
@@ -33,6 +60,25 @@ ul {
     height: auto;
 }
 
+#about .left {
+    align-self: center;
+    flex: 1;
+}
+
+#about h1 {
+    font-size: 48px;
+    font-weight: 800;
+    color: #f9faf8;
+}
+
+button {
+    background-color: #3882f6;
+    font-size: 18px;
+    color: #f9faf8;
+    padding: 5px 30px;
+    border-radius: 10px;
+    border: none;
+}
 .content {
     display: flex;
 }
@@ -53,16 +99,5 @@ ul {
     text-align: center;
 }
 
-.top {
-    display: flex;
-    flex-direction: column;
-    width: 1000px;
-    height: auto;
-    align-self: center;
-    gap: 10px;
-}
 
-#about .left {
-    align-self: center;
-    flex: 1;
-}
+
